@@ -596,6 +596,13 @@ class Mock(object):
                                       id(self))
 
 
+    def __dir__(self):
+        # note this method doesn't work on old style classes
+        extras = self._mock_methods or []
+        return sorted(list(set((dir(type(self)) + list(self.__dict__) +
+                                list(self._mock_children) + extras))))
+
+
     def __setattr__(self, name, value):
         if not 'method_calls' in self.__dict__:
             # allow all attribute setting until initialisation is complete
